<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- other settings -->

    <string name="app_name" translatable="false">DormeB</string>
    <string name="preference_file_key">com.dormeb.dormeb.PREFERENCE_FILE_KEY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- First activity -->

    <string name="splash_app_name_msg">DORMƎB</string>
    <string name="splash_first_msg">Sleep Better: Our app is designed to help you sleep more easily.</string>
    <string name="splash_second_msg">Sound Choices: Personalize your experience by choosing from three types of relaxing sounds for sleep.</string>
    <string name="splash_third_msg">Easy to Use: Simple and intuitive interface so you can set up your sleep environment quickly.</string>
    <string name="splash_button_start">START EXPERIENCE</string>
    <string name="splash_check_show_again">Don\'t show this again</string>
    <string name="saved_preference">Saved preference</string>

    <!-- Main activity -->

    <string name="message_audio_choose">Select an audio for sleeping</string>

    <string name="audio_rain">Rain</string>
    <string name="audio_desc_rain">This soft and calm melody is one of the oldest methods used to fall asleep</string>

    <string name="audio_thunder">Rain with Thunder</string>
    <string name="audio_desc_thunder">Relax with the sound of raindrops and distant thunder, creating a calm and immersive atmosphere</string>

    <string name="audio_fan">Fan</string>
    <string name="audio_desc_fan">This slightly modern melody, besides cooling the environment (sometimes), also helps relax your body after a busy day</string>

    <string name="audio_night_guard">Night Guard Siren</string>
    <string name="audio_desc_night_guard">Not so unfamiliar, this is the favorite melody of those who only sleep soundly when they feel safe</string>

    <string name="audio_street">Street Ambient Sound</string>
    <string name="audio_desc_street">Listen to the sounds of cars passing by in the distance and the gentle wind whispering through the trees. This combination creates a calm and tranquil atmosphere, perfect for relaxation and reflection</string>

    <string name="audio_forest">Forest</string>
    <string name="audio_desc_forest">Transport yourself to nature with the tranquil sounds of birds and the rustle of leaves</string>

    <string name="audio_air_conditioner">Air Conditioner</string>
    <string name="audio_desc_air_conditioner">This melody, besides cooling the environment, also helps to cool the mind of those who listen to it</string>

    <string name="audio_beach">Beach</string>
    <string name="audio_desc_beach">Relax to the sound of waves gently breaking on the shore</string>

    <string name="audio_fireplace">Campfire</string>
    <string name="audio_desc_fireplace">A cozy atmosphere created by the comforting crackle of flames</string>

    <string name="audio_clock">Clock</string>
    <string name="audio_desc_clock">The ticking sound of the clock for those who are afraid of losing track of time</string>

    <string name="audio_cicada">Cicada</string>
    <string name="audio_desc_cicada">This "gentle" cicada song can both relax and deafen those nearby</string>

    <string name="audio_cricket">Cricket</string>
    <string name="audio_desc_cricket">The primitive sound of crickets has been used since 7500 B.C. to sleep and relax</string>

    <string name="audio_wind">Wind</string>
    <string name="audio_desc_wind">The classic sound of wind that gives the sensation of flying</string>

    <string name="audio_waterfall">Waterfall</string>
    <string name="audio_desc_waterfall">The comforting sound of a waterfall is capable of making the user relax, but it is recommended that they not drink too much water before sleeping</string>

    <string name="audio_goose">Goose</string>
    <string name="audio_desc_goose">Sleep peacefully listening to the comforting sound of geese on the pond</string>

    <string name="audio_whale">Whale</string>
    <string name="audio_desc_whale">Whale songs, which could once be heard up to 1,000 km away, are now limited to 100–500 km due to increased noise pollution in the oceans</string>


    <string name="audio_desert">Desert</string>
    <string name="audio_desc_desert">Enjoy the serenity of desert noises, where the only things to hear are the wind and the small grains of sand being carried by it</string>

    <string name="audio_bird">Bird</string>
    <string name="audio_desc_bird">Enjoy and relax with the calm songs of birds in a forest</string>

    <string name="audio_penguin">Penguin</string>
    <string name="audio_desc_penguin">Feel like you\'re in Antarctica without leaving home with the sounds emitted by penguins</string>

    <string name="audio_car">Car</string>
    <string name="audio_desc_car">Feel like a race car driver about to win a race or a traveler driving long distances with the sound of the engine running</string>

    <string name="audio_construction_site">Construction Site</string>
    <string name="audio_desc_construction_site">How can someone relax listening to the noise of a construction site next door? Anyway, Relax!</string>

    <string name="button_pressed">pressed</string>
    <string name="button_not_pressed">not_pressed</string>

    <string name="txt_natural">Natural sounds</string>
    <string name="txt_water">Water sounds</string>
    <string name="txt_animal">Animals sounds</string>
    <string name="txt_urban">Urban sounds</string>

    <string name="desc_btn_natural">Go to naturals sounds</string>
    <string name="desc_btn_water">Go to water sounds</string>
    <string name="desc_btn_animals">Go to animals sounds</string>
    <string name="desc_btn_urban">Go to urban sounds</string>

    <string name="btn_themes">Themes</string>

    <!--         Dialog info -->

    <string name="dialog_info_tab">Information Table</string>
    <string name="dialog_info_title">Support Center</string>
    <string name="dialog_info_first_text">Found any errors in the app?</string>
    <string name="dialog_info_email">Contact us immediately: dormebapp@gmail.com</string>
    <string name="dialog_app_email">Support Email: dormebapp@gmail.com</string>
    <string name="dialog_select_timer">Select a timer option</string>

    <!-- Second activity -->

    <string name="button_tag_wake">wake</string>
    <string name="button_tag_sleep">sleep</string>

    <string name="countdown_timer" translatable="false">%s:%s</string>
    <string name="countdown_timer_zero" translatable="false">00:00</string>

    <!-- descriptions second activity -->

    <string name="second_activity_btn_pause">Pause</string>
    <string name="second_activity_timer_btn">Timer</string>
    <string name="second_activity_sleep_btn">Turn Off Screen</string>
    <string name="second_activity_first_volume_img">1st Volume Icon</string>
    <string name="second_activity_second_volume_img">2nd Volume Icon</string> <!-- tem um erro aq -->
    <string name="second_activity_third_volume_img">3rd Volume Icon</string>

    <!--         Dialog timer -->

    <string name="dialog_timer_title">Timer</string>
    <string name="dialog_timer_fifteen_minutes">15 minutes</string>
    <string name="dialog_timer_thirty_minutes">30 minutes</string>
    <string name="dialog_timer_one_hour">1 hour</string>
    <string name="dialog_timer_first_text">Select an option to schedule the app shutdown</string>

    <!-- Toast messages Main Activty -->

    <string name="error_max_audio_capacity_reached">You can only choose a maximum of 3 audios to play</string>
    <string name="error_min_audio_quantity_to_play">Choose at least 1 audio to play</string>

    <!-- Toast messages Second Activity -->

    <string name="error_no_audio_playing">This message shouldn\'t appear here, please contact support or restart the application</string>
    <string name="error_more_audio_than_support">There are more audios playing than the application supports</string>
    <string name="error_wait_ads">Wait the ads to load and press the button again</string>

    <!-- descriptions of buttons -->

    <string name="btn_play">PLAY</string>
    <string name="btn_info">INFORMATIONS</string>

    <!-- do not translate, important for code working. Coop work with SoundsName.kt -->
    <string name="desc_imgBtnRain" translatable="false">RAIN</string>
    <string name="desc_imgBtnThunder" translatable="false">THUNDER</string>
    <string name="desc_imgBtnFan" translatable="false">FAN</string>
    <string name="desc_imgBtnNightGuard" translatable="false">NIGHT_GUARD</string>
    <string name="desc_imgBtnCity" translatable="false">CITY</string>
    <string name="desc_imgBtnAirConditioner" translatable="false">AIR_CONDITIONER</string>
    <string name="desc_imgBtnForest" translatable="false">FOREST</string>
    <string name="desc_imgBtnBeach" translatable="false">BEACH</string>
    <string name="desc_imgBtnFireplace" translatable="false">FIREPLACE</string>
    <string name="desc_imgBtnClock" translatable="false">CLOCK</string>
    <string name="desc_imgBtnCicada" translatable="false">CICADA</string>
    <string name="desc_imgBtnCricket" translatable="false">CRICKET</string>
    <string name="desc_imgBtnWind" translatable="false">WIND</string>
    <string name="desc_imgBtnWaterfall" translatable="false">WATERFALL</string>
    <string name="desc_imgBtnGoose" translatable="false">GOOSE</string>
    <string name="desc_imgBtnWhale" translatable="false">WHALE</string>
    <string name="desc_imgBtnDesert" translatable="false">DESERT</string>
    <string name="desc_imgBtnBird" translatable="false">BIRD</string>
    <string name="desc_imgBtnPenguin" translatable="false">PENGUIN</string>
    <string name="desc_imgBtnCar" translatable="false">CAR</string>
    <string name="desc_imgBtnConstructionSite" translatable="false">CONSTRUCTION_SITE</string>



    <!-- Dialog themes -->

    <string name="desc_imgBtnThemeSpace" translatable="false">SPACE</string>
    <string name="desc_imgBtnThemeForest" translatable="false">FOREST</string>
    <string name="desc_imgBtnThemeCity" translatable="false">CITY</string>
    <string name="desc_imgBtnThemeBeach" translatable="false">BEACH</string>
    <string name="dialog_theme_title">Themes</string>

</resources>