<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="200sp"
    android:background="@drawable/background_gradient"
    app:cardBackgroundColor="@color/darkerBlue"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:text="@string/dialog_timer_first_text"
            android:textColor="@color/BlueforText"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_timer_title"
            android:textColor="@color/BlueforText"
            android:fontFamily="@font/roboto_regular"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/checkQui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_timer_fifteen_minutes"
            android:textColor="@color/BlueforText"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toStartOf="@+id/checkTri"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkTri" />

        <CheckBox
            android:id="@+id/checkTri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/dialog_timer_thirty_minutes"
            android:textColor="@color/BlueforText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkUma"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkQui"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkUma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_timer_one_hour"
            android:textColor="@color/BlueforText"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkTri"
            app:layout_constraintTop_toTopOf="@+id/checkTri" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>